doc(Readme): added a detailed readme documentation